browser/ss-facet-tags: All Tags sorting, paging, typeahead, jsdoc comments (+17 squashed commits) Squashed commits: [b4de428] browser/ss-facet-tags: add jsdoc comments, minor refactoring [41332a0] browser/ss-facet-tags: styles for All Tags dialog [79f060e] browser/ss-facet-tags: add more tag facets for All Tags dialog testing [655685c] browser/ss-facet-tags: make number of tags displayed configurable as attr [7248d63] browser/ss-facet-tags: make All Tags dialog work with sidebar list [7672c0b] browser/ss-facet-tags: rename stubData to searchResultsStatic [6c8f953] browser/ss-facet-tags: re-add tag styles [5b684d4] browser/ss-facet-tags: fix layout [b6e5740] playing with html [c757606] disable broken mlDynamicSearch tests [415faa7] restore explore.js [2dbd59d] get rid of stub data [9144fdb] browser/ss-facet-tags: pass tags and predicate to All Tags dialog (+25 squashed commits) Squashed commits: [7960ee0] browser/ss-facet-tags: tags styles [2af9b4f] browser/ss-facet-tags: remove stubData service
Stub data now defined in explore controller.
[a6c817a] browser/ss-facet-tags: start All Tags dialog
[97acbbb] browser/ss-facet-tags: remove menu template, fix repeats
[d89ffbb] browser/ss-facet-tags: fix styling for tags directive
[3278a78] browser/ss-facet-tags: add secondary sorting for tags
[cb60160] browser/ssFacetTags: tags as object, view has clear button
[3026971] browser/ss-facet-tags: move tag methods into directive link func
[4e76edb] browser/ss-facet-tags: typeahead filter by $viewValue
[0a109eb] move tags content to directive
[81e185e] add stub data to explore controller
[93a308f] add typeahead, selection to tags
[f9af4c0] browser/search: initial commit
[a506b72] browser/id-authenticate: restore mlAuth and include mlUserModel
[c06b5b6] temp hide mlAuth
[8d2fc9c] in-progress id-auth stuff
[3b7e2ab] browser: login dialog and account dropdown

Add dialog to present user with login prompt.

Add dropdown to display account information for logged-in user.
[6b2dc33] brow

--- a/browser/src/app/styles/style.scss
+++ b/browser/src/app/styles/style.scss
@@ -104,6 +104,7 @@ form textarea {
       }
       .ss-open-all-tags {
         cursor: pointer;
+        margin-top: 3px;
       }
     }
   }
@@ -250,6 +251,7 @@ form textarea {
   }
   footer {
     @extend .modal-footer;
+    clear: both;
   }
 }
 
@@ -267,6 +269,33 @@ form textarea {
     list-style: none;
     padding: 0;
     margin: 0;
+  }
+  .ss-column {
+    width: 190px;
+  }
+  .ss-paging {
+    clear: both;
+  }
+  .ss-all-tags-actions {
+    display: inline-block;
+    width: 100%;
+    padding-right: 20px;
+  }
+  ul.ss-sort {
+    position: relative;
+    float: right;
+    li {
+      margin-left: 10px;
+      cursor: pointer;
+    }
+    li.ss-sort-active {
+      font-weight: bold;
+    }
+  }
+  input.ss-typeahead-input {
+    width: 202px;
+    margin-bottom: 5px;
+    font-size: 14px;
   }
 }
 
@@ -327,6 +356,11 @@ ul.ss-tags {
 
 .ss-typeahead-item {
   cursor: pointer;
+}
+
+.ss-column {
+  position: relative;
+  float: left;
 }
 
 .ss-facet-date-range {
